# notifications-api

./: .gitignore  README.md  manual_testing.py  package-lock.json  package.json  pyproject.toml  serverless.yml
src/: access.py  managers.py  models.py
src/lambdas/: notifications.py
test/: factories.py
